--- a/src/app/page1/page1.component.html
+++ b/src/app/page1/page1.component.html
@@ -8,10 +8,9 @@
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Accueil</a></li>
                 <li class="nav-item"><a class="nav-link" href="#!">à propos</a></li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Boutique</a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#!">Tous les produits</a></li>
-                        <li><hr class="dropdown-divider" /></li>
+                    <a class="nav-link dropdown-toggle" id="navbarDropdown" routerLink="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Boutique</a>
+                    <ul class="dropdown-menu" >
+                        <li><a class="dropdown-item" href="/produit">Tous les produits</a></li>
                         <li><a class="dropdown-item" href="#!">Articles populaires</a></li>
                         <li><a class="dropdown-item" href="#!">Nouvelles Arrivées</a></li>
                     </ul>
@@ -243,5 +242,6 @@
 <footer class="py-5 bg-dark">
     <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
 </footer>
+
 
 
